--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -883,7 +883,7 @@ body:not(.tt-boxed) .tt-header-inner,
 	max-height: 48px; /* You may need to change the img height to match your logo type! */
 }
 
-.tt-logo-dark{
+.tt-logo-dark-dark{
 	display: none;
 }
 
